[metadata]
name = pyhurricane
version = 0.1.0
author = Hiroaki Yoshioka
author_email = y0sh10ka.h.1030@gmail.com
license = MIT
description = Analysis programs for tropical cyclone by gpv data
url = https://github.com/H1r0ak1Y0sh10ka/pyhurricane

[options]
packages = find:
install_requires =
    matplotlib==3.10.3
    numpy==2.2.6
    pip==24.2
    PyYAML==6.0.1
    PyYAML==6.0.2
    scipy==1.15.3
    setuptools==75.1.0
    xarray==2024.11.0
python_requires = >=3.8
